# clip-rs

./: Cargo.toml  design.md
src/: main.rs
