[package]
name = "clip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
arboard = "2.1.1"
chrono = "0.4.19"
clap = { version = "3.1.18", features = ["derive"] }
colored = "2.0.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.19.0", features = ["full"] }
